adicionados métodos get, delete e login